5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1716_2503.log
== TEST (2019-05-14 17:00:06) 
-- CODE:
x = int(input("numero: "))

soma = x
sinal = -1
n = 1
while(n<x):
	soma = soma +(sinal*(x/n))
	sinal = sinal *(-1)
	n = n + 2
print(round(soma, 8)
-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:00:24) 
-- CODE:
x = int(input("numero: "))

soma = x
sinal = -1
n = 1
while(n<x):
	soma = soma +(sinal*(x/n))
	sinal = sinal *(-1)
	n = n + 2
print(round(soma, 8))
-- OUTPUT:
29.68582275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:01:11) 
-- CODE:
x = int(input("numero: "))

soma = 0
sinal = 1
n = 1
while(n<x):
	soma = soma +(sinal*(x/n))
	sinal = sinal *(-1)
	n = n + 2
print(round(soma, 8))

-- OUTPUT:
106.31417725
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:01:49) 
-- CODE:
x = int(input("numero: "))

soma = 0
sinal = 1
n = 1
while(n<x):
	soma = soma +(sinal*(x/n))
	sinal = sinal *(-1)
	n = n + 2
print(round(soma, 8))

-- OUTPUT:
106.31417725
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:03:10) 
-- CODE:
x = int(input("numero: "))

soma = 0
sinal = -1
n = 1
while(n<x):
	soma = soma +(sinal*(x/n))
	sinal = sinal *(-1)
	n = n + 2
print(round(soma, 8))

-- OUTPUT:
-106.31417725
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:15:21) 
-- CODE:
x = int(input("numero: "))
soma = x
d = 1
n = 0
sinal = -1
while(n<x):
	soma = soma + (sinal*(x/d))
	sinal = sinal*(-1)
	d = d + 2
	n = n + 1
print(round(soma, 8))

-- OUTPUT:
29.4358464
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:11:56) 
-- CODE:
n = int(input("numero: "))
soma = 0
d = 1
cont = 0
sinal = -1
while(cont < n):
	soma = soma + (sinal*(4/d))
	sinal = sinal*(-1)
	d = d + 2
	cont = cont + 1
print(round(soma, 8))

-- OUTPUT:
-3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:12:40) 
-- CODE:
n = int(input("numero: "))
soma = 0
d = 1
cont = 0
sinal = -1
while(cont < n):
	soma = soma + (sinal*(4/d))
	sinal = sinal*(-1)
	d = d + 2
	cont = cont + 1
print(round(soma, 8))

-- OUTPUT:
-3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:13:17) 
-- CODE:
n = int(input("numero: "))
soma = 0
d = 1
cont = 0
sinal = 1
while(cont < n):
	soma = soma + (sinal*(4/d))
	sinal = sinal*(-1)
	d = d + 2
	cont = cont + 1
print(round(soma, 8))

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:13:26) 
-- CODE:
n = int(input("numero: "))
soma = 0
d = 1
cont = 0
sinal = 1
while(cont < n):
	soma = soma + (sinal*(4/d))
	sinal = sinal*(-1)
	d = d + 2
	cont = cont + 1
print(round(soma, 8))

-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:13:43) 
-- CODE:
n = int(input("numero: "))
soma = 0
d = 1
cont = 0
sinal = 1
while(cont < n):
	soma = soma + (sinal*(4/d))
	sinal = sinal*(-1)
	d = d + 2
	cont = cont + 1
print(round(soma, 8))

-- EXECUTION TIME:
0.136185
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
